Tue May 22 10:03:26 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/config-sunos5.10.h:
          It seems that Solaris 10 supports log2 so we can undefine
          ACE_LACKS_LOG2. 

Tue May 22 09:56:40 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/config-sunos5.5.h:
          Defined ACE_LACKS_LOG2.

Tue May 22 06:44:09 UTC 2007  Olli Savia  <ops@iki.fi>

        * tests/OS_Test.cpp:
          Disable log2 test if ACE_LACKS_LOG2 is defined.

Tue May 22 06:43:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.2:
        * ace/config-vxworks6.3:
        * ace/config-vxworks6.4:
          VxWorks also seems to have problems with log2, so disable it for the
          moment to get the builds running again

Tue May 22 06:11:34 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/OS_NS_math.h:
        * ace/OS_NS_math.inl:
        * ace/config-win32-common.h:
          Hide ACE_OS::log2 method if platform doesn't support it
          natively. This is temporary fix just to keep things going
          until we have made decicion what is the best solution here.

Tue May 22 01:14:31 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * THANKS: Vikram Karandikar <softking at gmail dot com> is the 2200th
          contributor to ACE+TAO+CIAO!!

Mon May 21 22:56:26 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/OS_main.h:

          Fixed syntax error on VxWorks.  The return value for the
          ace_os_main_i() prototype was missing.

Mon May 21 10:32:02 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/OS_NS_math.h (ace_log2_helper):

          Fixed compile-time errors on Windows introduced by Olli's
          improvements described below.  VC8 doesn't support log2().
          Generate a quiet NaN value for now.

        * ace/OS_Memory.h (ACE_align_binary, ACE_ptr_align_binary):

          Handle OpenVMS's strange multiple size pointer model.  Addresses