@@ -1,8 +1,17 @@
+Tue May 22 11:10:30 UTC 2007  Olli Savia  <ops@iki.fi>
+
+        * ace/OS_NS_math.h:
+        * ace/OS_NS_math.inl:
+          Added log2() emulation.
+        
+        * tests/OS_Test.cpp:
+          Simplified log2 test.
+
 Tue May 22 10:03:26 UTC 2007  Olli Savia  <ops@iki.fi>
 
         * ace/config-sunos5.10.h:
           It seems that Solaris 10 supports log2 so we can undefine
-          ACE_LACKS_LOG2. 
+          ACE_LACKS_LOG2.
 
 Tue May 22 09:56:40 UTC 2007  Olli Savia  <ops@iki.fi>
 
